# nurse-scheduler

./: .gitignore  20260201_0228근무신청표(일 생휴_오프_수면_휴가_D9_보수 9개 까지만 가능).xlsx  CLAUDE.md  NurseScheduler.spec  README.md  build.bat  diagnostic.py  diagnostic2.py  diagnostic3.py  main.py  nurse_info.xlsx  package-lock.json  project_info.md  pyproject.toml  render.yaml  request_app.jsx  request_example.xlsx  test_solver_direct.py  근무표 규칙.xlsx  근무표_2026_03.xlsx  근무표_260104_260131.xlsx  근무표_260301~260328.xlsx  근무표_260329~260425.xlsx  근무표_규칙_안내.md  근무표_요청사항_1.xlsx  근무표_요청사항_2.xlsx  제약정리.md
.claude/: settings.local.json
.github/workflows/: keep-alive.yml
backend/: .env.example  asgi.py  auth.py  config.py  database.py  deps.py  main.py  pyproject.toml  render.yaml  requirements.txt  schemas.py  worker.py
backend/routers/: auth.py  export.py  holidays.py  nurses.py  requests.py  rules.py  schedule.py  settings.py
docs/: db_sql.sql  supabase_schema.sql
engine/: evaluator.py  excel_io.py  kr_holidays.py  models.py  solver.py  validator.py
engine_ex/: evaluator.py  excel_io.py  models.py  solver.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/api/: client.js
frontend/src/components/: NameFilter.jsx  PinModal.jsx  ShiftSheet.jsx
frontend/src/pages/: LandingPage.jsx  NurseAuthPage.jsx  NursePage.jsx
frontend/src/store/: auth.js
ui/: guide_panel.py  help_dialog.py  main_window.py  request_tab.py  result_tab.py  rules_tab.py  setup_tab.py  styles.py
(+8 files in other folders)
